--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/img/Calculator-App-Logo_1.ico" />
+    <link rel="icon" href="../src/assets/img/Calculator-App-Logo_1.ico" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Calculator"/>
     <title>Calculator App</title>
   </head>
-  <body>
+  <body class="light-mode">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <footer>
